tests/models/struct/unnamed/usize/fail/lt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(lt = 2.0)]
    usize
);
fn main() {}
